--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-MYSQL_ROOT_PASSWORD=
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
 
 FRONTEND_URL=
 CRON_KEY=
