--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 ENV NEXT_TELEMETRY_DISABLED 1
 
 COPY package.json yarn.lock ./
-RUN apk add --no-cache curl && yarn install
+RUN yarn install
 
 COPY . .
 # RUN yarn build
